more parameters to user add
